--- a/src/app/components/not-found-page/not-found-page.html
+++ b/src/app/components/not-found-page/not-found-page.html
@@ -1,1 +1,10 @@
-<p>not-found-page works!</p>
+<div class="not-found-container">
+  <div class="content-wrapper">
+    <h1 class="title">404</h1>
+    <h2 class="subtitle">Page Not Found</h2>
+    <p class="description">
+      Oops! The page you're looking for doesn't exist. It might have been moved or deleted.
+    </p>
+    <a routerLink="/" class="home-button">Go to Homepage</a>
+    </div>
+</div>
