Starter Featurs Completed

--- a/src/app/modules/starter/components/starter-header/starter-header.html
+++ b/src/app/modules/starter/components/starter-header/starter-header.html
@@ -4,8 +4,8 @@
 
     <nav class="main-nav">
       <ul>
-        <li><a>Home</a></li>
-        <li><a>About</a></li>
+        <li><a routerLink="/starter/home">Home</a></li>
+        <li><a routerLink="/starter/pricing">Pricing</a></li>
         <li><a>Services</a></li>
         <li><a>Contact</a></li>
         <li><a>Customers</a></li>
