--- a/src/app/modules/starter/components/starter-header/starter-header.html
+++ b/src/app/modules/starter/components/starter-header/starter-header.html
@@ -6,7 +6,7 @@
       <ul>
         <li><a routerLink="/starter/home">Home</a></li>
         <li><a routerLink="/starter/pricing">Pricing</a></li>
-        <li><a>Services</a></li>
+        <li><a routerLink="/security/login">Console</a></li>
         <li><a>Contact</a></li>
         <li><a>Customers</a></li>
       </ul>
